Add support for headless testing via PhantomJS

--- a/test/index.html
+++ b/test/index.html
@@ -21,7 +21,8 @@
       }
     </script>
     <!-- Test scripts get loaded here, point to .js not .coffee -->
-    <script src="lib/test.js"></script>
+    <script src="lib/main.js"></script>
+    <script src="lib/helpers.js"></script>
   </head>
 
   <body>
